--- a/css/index.less
+++ b/css/index.less
@@ -1179,7 +1179,10 @@ nav{
 						&.renren:after{
 							background-color: #005aab;
 						}
-
+						&.weixin:after{
+							background-color: #08CF1E;
+						}
+						
 						&:after{
 							position: absolute;
 							content: attr(data-hover);
