--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,9 +9,9 @@
 					<p class="after-name"><span class="span-text title-font">{{ site.subtitle }}</span></p>
 
 					<div class="row info">
-						<div class="col-md-4"><p><i class="fa fa-mobile-phone"></i><br />{{ site.mobile }}</p></div>
-						<div class="col-md-4"><p><i class="fa fa-envelope-o"></i><br /><a href="#">{{ site.email }}</a></p></div>
-						<div class="col-md-4"><p><i class="fa fa-laptop"></i><br /><a href="#">{{ site.url }}</a></p></div>
+						<div class="col-md-4"><p><i class="fa fa-laptop"></i><br>{{ site.url }}</p></div>
+						<div class="col-md-4"><p><i class="fa fa-envelope-o"></i><br><a href="mailto:{{ site.email }}">{{ site.email }}</a></p></div>
+						<div class="col-md-4"><p><i class="fa fa-mobile-phone"></i><br>{{ site.mobile }}</p></div>
 					</div>
 
 				</div>
