--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,10 +16,10 @@
 	</ul>
 	<div class="after-menu">
 		<ul class="social list-inline text-center">
-			<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-			<li><a href="#"><i class="fa fa-weixin"></i></a></li>
-			<li><a href="#"><i class="fa fa-stack-overflow"></i></a></li>
-			<li><a href="#"><i class="fa fa-github"></i></a></li>
+			<li><a href="https://cn.linkedin.com/in/marceloomens/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+			<li><a href="http://weixin.qq.com/r/vl7P193EWYAmrZm09wus" target="_blank"><i class="fa fa-weixin"></i></a></li>
+			<li><a href="http://stackoverflow.com/users/1931235/marcel-oomens" target="_blank"><i class="fa fa-stack-overflow"></i></a></li>
+			<li><a href="https://www.github.com/marceloomens/" target="_blank"><i class="fa fa-github"></i></a></li>
 		</ul>
 	</div>
 </nav>
